fix: Empty Module Name
Signed-off-by: Syed Mujeer Hashmi <mujeerhashmi@4csolutions.in>

--- a/website_4cs/www/index.html
+++ b/website_4cs/www/index.html
@@ -5,11 +5,48 @@
 {% endblock %}
 
 {% block style_4cs %}
-{% include "/templates/includes/css.html" %}
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/fonts.css">
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/bootstrap.min.css">
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/font-awesome.min.css">
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/animate.min.css">
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/ionicons.min.css">
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/owl.carousel.min.css">
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/lightbox.min.css">
+<link type="text/css" rel="stylesheet" href="/assets/website_4cs/css/style.css">
 {% endblock %}
 
 {% block script_4cs %}
-{% include "/templates/includes/scripts.html" %}
+<script type="text/javascript" src="/assets/website_4cs/js/jquery.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/jquery-migrate.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/easing.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/hoverIntent.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/superfish.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/wow.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/waypoints.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/counterup.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/owl.carousel.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/isotope.pkgd.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/lightbox.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/jquery.touchSwipe.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/typed.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/particles.min.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/particles.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/contactform.js"></script>
+<script type="text/javascript" src="/assets/website_4cs/js/main.js"></script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/5f830da0f0e7167d0018077d/1ekbvd6jr';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+</script>
+<!--End of Tawk.to Script-->
 {% endblock %}
 
 {% block content %}
